src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Karla:wght@700&display=swap');

* {
  font-family: 'Karla', sans-serif;
  box-sizing: border-box;
}




body {
  margin: 0;
  position: relative;
  box-sizing: border-box;
  height: 100vh;
}



.main--container{
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  
  
}

.questions--container{
  padding: 3em;
}

.blobYellow {

  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
  

}

.blobBlue {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: -1;
}


/* .questions--container{
  
} */
.startPage{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.startHeader{
  color:#293264 ;
  font-size: 4rem;
}

.question {
  color: #293264;
  font-size: 1.2rem;
  margin-bottom: .5em;
}

.answers{
  display: flex;
  gap: 1em;
}
.answersBtn {
  border: 1px solid #293264;
  color:#293264;
  border-radius: 1em;
  background-color: transparent;
  font-family: 'inter';
  margin-bottom: 1.5em;
  padding: .25em 1em;
}




.selected{
  color: white;
  background-color: #94D7A2;
}

.bottom-bar{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1em;

}

.score{
  color: black;
}

.showAnswer{
  background-color: #94D7A2;
  color: black;
  border: none;
}

.dim{
  opacity: .5;
}

.btn-checkAnswers , .btn-playAgain , .btn-startQuiz {
  background-color: #4D5B9E;
  padding: 1em 2em;
  color: white;
  border-radius: 2em;
  border: 1px solid #4D5B9E;
}


button[disabled] {
  /* CSS styles for disabled buttons */
  color: gray;
  cursor: not-allowed;
}


@media(max-width:600px){
  *{
    font-size: 12px;
  }
}

@media(max-width:450px){

  .questions--container{
    margin-top: 5em;
  }

  .answers{
    flex-direction: column;
    gap: 0;
    
  }

  .answersBtn{
    width: 75%;
  }

  .body{
    height: 125vh;
  }

  
}

